--- a/meme-generator/src/App.css
+++ b/meme-generator/src/App.css
@@ -44,64 +44,13 @@
   margin-left: auto;
   margin-right: 60px;
   font-size: large;
-
 }
 
 #project-three {
   color: rgb(0, 24, 118);
 }
 
-#both-forms {
-  display: flex;
-  justify-content: center;
-  height: 110px;
-  align-items: center;
-  font-size: 19px;
-  font-weight: medium;
-  font-family: "Karla", sans-serif;
-  gap: 6.55px;
-  padding: 7.37px 10.64px 7.37px 10.64px;
-  width: 80%;
-  margin-right: auto;
-  margin-left: auto;
-  
-  
-}
-
-/*! How to add padding? */
-#top-form {
-  display: flex;
-  flex-direction: column;
-  width: 225px;
-  margin-bottom: 10px;
-
-}
-
-#bottom-form {
-  display: flex;
-
-  flex-direction: column;
-  width: 225px;
-  margin-bottom: 10px;
-}
-
-#submit {
-  width: 477px;
-  height: 40px;
-  /* top: 163px;
-left: 37px; */
-  gap: 0px;
-  border-radius: 5px;
-  background: linear-gradient(90.41deg, #711F8D 1.14%, #A818DA 100%);
-  color: white;
-  font-weight: bold;
-
-}
-
-#button-container {
-  display: flex;
-  justify-content: center;
-  width: 80%;
-  margin-right: auto;
-  margin-left: auto;
+#form {
+  display: grid;
+  grid-template: 40px 40px / 1fr 1fr;
 }
